[gd_scene load_steps=25 format=2]

[ext_resource path="res://content/gadgets/teleporter/Teleporter.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/teleporter/focus.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/teleporter/carry.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/teleporter/teleporter_inactive.png" type="Texture" id=4]
[ext_resource path="res://content/shared/HighlightShader.material" type="Material" id=5]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/techtree/common/marching-ants.shader" type="Shader" id=7]
[ext_resource path="res://content/gadgets/teleporter/line.png" type="Texture" id=8]
[ext_resource path="res://content/gadgets/teleporter/teleporter_active.png" type="Texture" id=9]
[ext_resource path="res://systems/style/palettes/index_palette.png" type="Texture" id=10]
[ext_resource path="res://content/sounds/Amb/giraffe.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/Locations/Teleport/TeleportDone.wav" type="AudioStream" id=12]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=13]
[ext_resource path="res://content/sounds/Locations/Teleport/TeleportReady.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "cooldown",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "ready",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 6.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.24933, 0.533512, 0.80429, 1 )
colors = PoolColorArray( 1, 0.666667, 0.368627, 0, 0.815686, 0.505882, 0.34902, 1, 1, 0.666667, 0.368627, 1, 0.552941, 0.411765, 0.478431, 1, 0.552941, 0.411765, 0.478431, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.9
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 8.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 4.0
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=6]
radius = 28.0179

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.0472973, 0.353729, 0.670608, 0.971284, 1 )
colors = PoolColorArray( 0.188235, 0.392157, 0.627451, 0, 0.188235, 0.392157, 0.627451, 1, 0.12549, 0.207843, 0.627451, 1, 0.12549, 0.207843, 0.627451, 1, 0.188235, 0.392157, 0.627451, 1, 0.188235, 0.392157, 0.627451, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 26.0
orbit_velocity = 0.5
orbit_velocity_random = 0.12
color_ramp = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 7 )
shader_param/speed = -100.0
shader_param/palette = ExtResource( 10 )

[node name="Teleporter" type="RigidBody2D" groups=["saveable", "teleporters"]]
z_index = 10
collision_layer = 552
collision_mask = 32768
gravity_scale = 0.1
can_sleep = false
angular_damp = 5.0
script = ExtResource( 1 )
additionalSlowdown = 0.18
carryableType = "gadget"

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "ready"

[node name="CarrySprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="FocusSprite" type="Sprite" parent="."]
visible = false
material = ExtResource( 5 )
position = Vector2( 0.5, 0.5 )
z_index = 30
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="UseParticles" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
emitting = false
amount = 40
lifetime = 6.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true

[node name="TeleportationTimer" type="Tween" parent="."]

[node name="Usable" parent="." instance=ExtResource( 6 )]

[node name="ResourceSucker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceSucker"]
shape = SubResource( 6 )
disabled = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 100
lifetime = 2.0
speed_scale = 2.0
process_material = SubResource( 9 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 10 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 8 )
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="ResourcePull" parent="." instance=ExtResource( 13 )]
stream = ExtResource( 11 )

[node name="ResourceTeleport" parent="." instance=ExtResource( 13 )]
stream = ExtResource( 12 )
volume_db = -7.792
pitch_scale = 1.87

[node name="ResourcePullStop" parent="." instance=ExtResource( 13 )]
stream = ExtResource( 14 )
volume_db = 7.453
pitch_scale = 0.75

[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="body_entered" from="ResourceSucker" to="." method="_on_ResourceSucker_body_entered"]
[connection signal="body_exited" from="ResourceSucker" to="." method="_on_ResourceSucker_body_exited"]
